[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/Selector.gd" type="Script" id=1]
[ext_resource path="res://Images/System/WindowBg.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Font_03.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Images/Selector/Items_0.png" type="Texture" id=4]
[ext_resource path="res://Images/Selector/Top.png" type="Texture" id=5]
[ext_resource path="res://Sound/SoundLib.tres" type="SampleLibrary" id=6]


[sub_resource type="Animation" id=1]

resource/name = "Hide"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Text_2:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 494 ), Vector2( 21, 472 ), Vector2( 21, 701 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text_3:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 538 ), Vector2( 23, 516 ), Vector2( 23, 745 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text_5:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 643, 494 ), Vector2( 643, 472 ), Vector2( 643, 701 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text_4:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 655, 538 ), Vector2( 655, 516 ), Vector2( 655, 745 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Text_6:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 630, 452 ), Vector2( 630, 430 ), Vector2( 630, 659 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Question:rect/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 22, 412 ), Vector2( 22, 390 ), Vector2( 22, 619 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Text_1:rect/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 452 ), Vector2( 21, 430 ), Vector2( 21, 659 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Background:transform/pos")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 393 ), Vector2( 0, 371 ), Vector2( 0, 600 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CursorBg:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 524 ), Vector2( 528, 502 ), Vector2( 528, 731 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cursor:transform/pos")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 524 ), Vector2( 528, 502 ), Vector2( 528, 731 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Text_2:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 701 ), Vector2( 21, 472 ), Vector2( 21, 495 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text_3:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 745 ), Vector2( 23, 516 ), Vector2( 23, 539 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Text_5:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 643, 701 ), Vector2( 643, 472 ), Vector2( 643, 495 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text_4:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 655, 745 ), Vector2( 655, 516 ), Vector2( 655, 539 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Text_6:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 630, 659 ), Vector2( 630, 430 ), Vector2( 630, 453 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Question:rect/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 22, 619 ), Vector2( 22, 390 ), Vector2( 22, 413 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Text_1:rect/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21, 659 ), Vector2( 21, 430 ), Vector2( 21, 453 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Background:transform/pos")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 371 ), Vector2( 0, 394 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CursorBg:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 731 ), Vector2( 528, 502 ), Vector2( 528, 525 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cursor:transform/pos")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.3, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 731 ), Vector2( 528, 502 ), Vector2( 528, 525 ) ]
}

[node name="Selector" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 0, 394 )
texture = ExtResource( 2 )
centered = false

[node name="Text_1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 453.0
margin/right = 428.0
margin/bottom = 493.0
custom_fonts/font = ExtResource( 3 )
text = "Text #01"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text_2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 495.0
margin/right = 418.0
margin/bottom = 535.0
custom_fonts/font = ExtResource( 3 )
text = "Text #02"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text_3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 539.0
margin/right = 406.0
margin/bottom = 579.0
custom_fonts/font = ExtResource( 3 )
text = "Text #03"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text_4" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 655.0
margin/top = 539.0
margin/right = 1000.0
margin/bottom = 579.0
custom_fonts/font = ExtResource( 3 )
text = "Text #04"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text_5" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 643.0
margin/top = 495.0
margin/right = 1003.0
margin/bottom = 535.0
custom_fonts/font = ExtResource( 3 )
text = "Text #05"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Text_6" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 630.0
margin/top = 453.0
margin/right = 1001.0
margin/bottom = 493.0
custom_fonts/font = ExtResource( 3 )
text = "Text #06"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Question" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 22.0
margin/top = 413.0
margin/right = 1002.0
margin/bottom = 453.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.976563, 0.712782, 0.339508, 1 )
text = "Question!?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CursorBg" type="Sprite" parent="."]

transform/pos = Vector2( 528, 525 )
texture = ExtResource( 4 )

[node name="Cursor" type="Sprite" parent="."]

transform/pos = Vector2( 528, 525 )
texture = ExtResource( 5 )

[node name="WinAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hide = SubResource( 1 )
anims/Show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = ExtResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


